--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,9 +1,9 @@
 <h1>Bienvenue à Stupid Coach</h1>
 <hr>
-<p>Question</p>
+<p>Your question was:</p>
 <%= @question %>
 <hr>
-<p>Réponse</p>
+<p>Your answer is:</p>
 <%= @answer %>
 <hr>
 
